@@ -4,7 +4,7 @@
       "Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Tels <nospam-abuse@bloodgate.com>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112150",
+   "generated_by" : "ExtUtils::MakeMaker version 6.94, CPAN::Meta::Converter version 2.140640",
    "license" : [
       "perl_5"
    ],
@@ -22,24 +22,24 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "6.42",
+            "ExtUtils::MakeMaker" : "6.59",
             "Test::More" : "0.62"
          }
       },
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "runtime" : {
          "requires" : {
-            "Math::BigInt" : "1.997",
-            "Math::BigInt::Calc" : "1.997",
-            "XSLoader" : 0,
+            "Math::BigInt" : "1.9993",
+            "Math::BigInt::Calc" : "1.9993",
+            "XSLoader" : "0",
             "perl" : "5.006"
          }
       }
    },
    "release_status" : "stable",
-   "version" : "0.30"
+   "version" : "0.31"
 }
