@@ -1,5 +1,5 @@
 This file contains message digests of all files listed in MANIFEST,
-signed via the Module::Signature module, version 0.68.
+signed via the Module::Signature module, version 0.73.
 
 To verify the content in this distribution, first make sure you have
 Module::Signature installed, then type:
@@ -14,43 +14,47 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 765251f4a27fc6f190ffad2c4c15067c84350c46 CHANGES
+SHA1 1ff2e0dc71fb284548dd59773d2cff12694cd966 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 c43ea080f42c120ca52b6f0755b13562597e55c0 FastCalc.xs
+SHA1 2261acc1a1f1ab8a2907380291dbde2063178aaa FastCalc.xs
 SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 3ffafaa0f0a03f7bd1c927424cc1b320ab46fa07 META.json
-SHA1 11e13804372e413cfc4e677a0c744873f7ca0ec6 META.yml
-SHA1 d25310bd2b2821694dec302780eabae58c2bd772 Makefile.PL
+SHA1 a5e33a5a0c729a066fe20bf8273c654305c4473e META.json
+SHA1 105ea5d4345ce53f77656c4a560721dbcc8ab966 META.yml
+SHA1 82ff7b83ba575f0bcdb6941d199481b68733162f Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
-SHA1 7b4ae50ebac72d20761171c4c2b50c206344ea40 inc/Module/Install.pm
-SHA1 d9fe55a427fe2fd75b5029afeeaa61b592e07f79 inc/Module/Install/Base.pm
-SHA1 62d3922826d9f89f20c185e7031ac8f028504745 inc/Module/Install/Can.pm
-SHA1 dc809f64fb70a26b069a36f8d3d353d520dbb7e1 inc/Module/Install/Fetch.pm
-SHA1 73ab91490a628452cc140db72ef9d13a1326d211 inc/Module/Install/Makefile.pm
-SHA1 8ce3f2b414e4617e6233dd4ba10830f8c5d672ec inc/Module/Install/Metadata.pm
-SHA1 3b0acd2eeac93a0afe48120f5648f0db362e5bbf inc/Module/Install/Win32.pm
-SHA1 f08924f051e623f8e09fa6a121993c4a9cf7d9eb inc/Module/Install/WriteAll.pm
-SHA1 f3e6c0427ef780ee2cc93ed57a1c9efa567dd591 lib/Math/BigInt/FastCalc.pm
+SHA1 dc13ce0dbb488a5de81c3f6519ee31acda17397a inc/Module/Install.pm
+SHA1 91c20cbda8ca41b4e8f9e0390faff635c2ebe839 inc/Module/Install/Base.pm
+SHA1 eaf50ccbacecb797f0527deb0221c8264f6c8bd8 inc/Module/Install/Can.pm
+SHA1 363c8931cc183444907684b71d6a379e4fc8edcb inc/Module/Install/Fetch.pm
+SHA1 26ae1c0f5f352037b560414f216d7e3ac682f936 inc/Module/Install/Makefile.pm
+SHA1 ff97eb025b44c343d026c2a56a73d50c65319e95 inc/Module/Install/Metadata.pm
+SHA1 4c5ce519d404e242418f51dfe761287469e18e3a inc/Module/Install/Win32.pm
+SHA1 47a52cf8719a283c0efa2edab0088b5d67e0f23a inc/Module/Install/WriteAll.pm
+SHA1 40a703e3763afc91e3da70942e49b5ad7b6e14a0 lib/Math/BigInt/FastCalc.pm
 SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
 SHA1 b5ae0080ba067ecb1253a50834dc6c2946af26b9 t/01load.t
 SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
 SHA1 b0d251938fb1a6f4ab2b731b9f1bfa2ce489ccaf t/03podcov.t
-SHA1 d05514d6cae3afa4feb983d5467eaf9422aa546c t/bigfltpm.inc
-SHA1 a8f364fea5e2993f5ae7bd3f8463024175d33e24 t/bigfltpm.t
+SHA1 e6bb2aea2f026016848db9ca96507c4ca4e3d265 t/bigfltpm.inc
+SHA1 9537400817c028f2282e3c085796ecbded0ccb66 t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 845e7daa3c6b2463a6fdc9218044975801547bb8 t/bigintpm.inc
-SHA1 5c7e31a73f1827d08118f96cf31d5d4e792ab8c0 t/bigintpm.t
+SHA1 d5d419d73cc52371ba3487895fd49f793ffe4d0c t/bigintpm.inc
+SHA1 73ac3701a1116b1831c871153c836f618a60f4d7 t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
-SHA1 47b841398933fd438c137ea5ffda893497b68443 t/leak.t
-SHA1 2b9490eab4d5371b804a39fb16e77c6bd6bbd006 t/mbi_rand.t
+SHA1 38bf0f7b9949bf4eb746831ecde91841f0118931 t/leak.t
+SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
 SHA1 38d000d99cb2492ab518786e62ab1fae710e0f8d t/mbimbf.inc
 SHA1 2709f7d1acdb39aab910d3ba4c88191b28cc3cfc t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.9 (Cygwin)
+Version: GnuPG v1
 
-iEYEARECAAYFAk5oYTkACgkQVQvyyU1bchqcSACg3u60tu6+1endJ4D9olQiu2bw
-8CIAn14tYwPBppsOaK+M8OTlOubywsPG
-=tLOv
+iQEcBAEBAgAGBQJTPo41AAoJEGcmPl2fr166e2sIALOAzQpwnoisBRYIn828RP6h
+z2sl2mMyKPjehf2vl1XwuZ9gGTARP7ZWBykQqaF0+CVtOh66X8GILJTA15twD2Sz
+gzQJVA2+2H1MwOkb0XmuDOFHJRuDJwsmQhZOPQbmwdvI0RK0hkDg92LIV96kKkej
+1G/0w3cyJaOLKRCFS0JHoLrAaI+Z7oGqP+1htvcQTvzoMtuLrWVgQImOn1u9N0sG
+z2RjxtAsTzp1huTSIDj0C5LhOC2LO58LWFTZFsI3b/OgTMHfnuqB2Ob/ZRWMH/A+
+OWJhJVgCTmA/y0g/uaEcIffzaqp3+wQKH/FoV5mWi4jFULiO8hZs4NyH0hSHQUg=
+=DtBl
 -----END PGP SIGNATURE-----
